--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>text</h1>
+    <h1>Task manager</h1>
 
     <main>
         <section class="border component colum1">
@@ -43,12 +43,13 @@
         </section>
         <section class="border component colum2">
             <div class="message-box">
-                <div class="cancel-button">
-                    cancel
+                <div class="cancel-button-box">
+                    <button class="task-button">X</button>
                 </div>
                 <div class="message-box-main">
                     <div class=" message-box-text ">
-                        <input type="text ">
+                        <!-- <input type="text"> -->
+                        <p>Do you really want to delete all items?</p>
                     </div>
                     <div class="message-box-buttons ">
                         <button class="message-button ">Ok</button>
